# EOSSeminar-MotionController

./: .gitmodules  LICENSE  README.md
demo/kinematics3d/: README.md  input.pde  kinematics3d.pde  settings.pde
driver/: Cargo.toml  README.md  state_and_flow_diagram.excalidraw
driver/dmc/: Cargo.toml
driver/dmc/src/: lib.rs
driver/dmc_client/: Cargo.toml
driver/dmc_client/src/: main.rs
driver/dmc_daemon/: Cargo.toml
driver/dmc_daemon/src/: ble_connection.rs  ble_spec.rs  controller_mock.rs  lib.rs  main.rs  state.rs
driver/dmc_daemon/src/event_handling/: ble.rs  mod.rs  ws.rs
driver/dmc_daemon/src/utils/: mod.rs
driver/dmc_vigem_client/: Cargo.toml
driver/dmc_vigem_client/src/: main.rs
driver/mmap_test/: Cargo.toml  README.md
driver/mmap_test/src/: main.rs
driver/rust_ble_sandbox/: Cargo.toml
driver/rust_ble_sandbox/src/: main.rs
driver/test_webclient/: README.md  index.html
firmware/: README.md
firmware/ble_server/: CMakeLists.txt  main.cpp
firmware/helloworld/: CMakeLists.txt  README.md  hello_world.cpp
firmware/imu_test/: CMakeLists.txt  main.cpp
firmware/v1/: .gitignore  CMakeLists.txt  README.md  ble_manager.cpp  main.cpp  math_utils.cpp  state_diagram.excalidraw
firmware/v1/ble/: CMakeLists.txt  classic_characteristic.cpp  led_characteristic.cpp
firmware/v1/demo/: CMakeLists.txt  README.md  joystick.cpp
firmware/v1/include/: ble_abstraction.h  ble_manager.h  board_definitions.h  constants.h  math_utils.h  pin_definitions.h  version.h
firmware/v1/include/ble/: classic_characteristic.h  led_characteristic.h
firmware/v1/include/boards/: avr_nano.h  esp32_esp32c3.h  esp32_esp32c3_prototype2.h
firmware/v1/include/services/: battery_service.h  button_service.h  joystick_service.h  led_service.h  rumble_service.h
firmware/v1/services/: CMakeLists.txt  battery_service.cpp  button_service.cpp  joystick_service.cpp  led_service.cpp  rumble_service.cpp
hardware/: controller_design.excalidraw
