[package]
name = "dmc_daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "^0.9.0"
tokio = { version = "^1.10.0", features = ["full"] }
tokio-stream = "^0.1.8"
futures = "^0.3.16"
uuid = "^0.8.2"
tokio-tungstenite = "^0.16.1"
tungstenite = "^0.16.0"
bincode = "~1.3.3"
dmc = { path = "../dmc" }
