[package]
name = "dmc_daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
btleplug = "^0.9.0"
tokio = { version = "^1.10.0", features = ["full"] }
tokio-stream = "^0.1.8"
futures = "^0.3.16"
uuid = "^0.8.2"
tokio-tungstenite = "^0.16.1"
tungstenite = "^0.16.0"
serde_json="1.0"
dmc = { path = "../dmc" }
